# PYTHON_OPTIMIZATION_ADAPTER

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TENSOR_REFERENCE.json  demo_problems.py  main.py  pyproject.toml  setup.py
automotive_engine_calibration/: system_data.py
msef/: __init__.py  build_global_model.py  build_sequential_model.py  constraint_rules.py  discrete_logic.py  discretization.py  equations.py  extra_variables.py  main.py  parameters.py  postprocessing.py  postprocessing_live.py  solver.py
msef/plotting/: plotting.py  plotting_live.py  plotting_mixed.py
msef/user_data/: discrete_logic.json  lookup.py  object_data.json
msef/user_data/problems/: object_data_0.json  object_data_1.json
pyomo_interface_tool/: __init__.py  build_global_model.py  constraint_analysis.py  constraint_analyzer.py  discrete_logic.py  main.py  optimization.py  postprocessing_live.py  problem_selector.py  solver.py
pyomo_interface_tool/plotting/: plotting.py
pyomo_interface_tool/user_data/: object_data.json  optimization_test.json  simple_problem2_optimization.json
pyomo_interface_tool/user_data/problems/: discrete_logic_problem2.json  object_data_2.json  object_data_3.json  problem1_fully_constrained.json  problem2_optimization.json  simple_optimization_problem.json  simple_problem1_fully_constrained.json  simple_problem2_optimization.json
pyomo_optimizer_user_interface/: __init__.py  build_global_model.py  build_sequential_model.py  computational_resource_calculator.py  constraint_analyzer.py  constraint_rules.py  discrete_logic.py  discretization.py  dynamic_loader.py  equations.py  main.py  optimization.py  optimization_complex.py  parameters.py  plotting.py  postprocessing.py  solver.py  solver_config.py
user_data_example/: README.md  object_data.json  system_data.py
