[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyomo-optimizer-user-interface"
version = "1.0.0"
description = "Pyomo Optimizer User Interface - MINLP simulation framework for optimization problems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Victor Veloso", email = "velosovictor@example.com" }
]
keywords = ["optimization", "MINLP", "pyomo", "simulation", "energy", "nonlinear-programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pymongo>=4.0.0",
    "pyomo>=6.7.0",
    "sympy>=1.12.0",
    "xarray>=2023.1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/velosovictor/PYTHON_OPTIMIZATION_ADAPTER"
Repository = "https://github.com/velosovictor/PYTHON_OPTIMIZATION_ADAPTER.git"
Issues = "https://github.com/velosovictor/PYTHON_OPTIMIZATION_ADAPTER/issues"
Documentation = "https://github.com/velosovictor/PYTHON_OPTIMIZATION_ADAPTER#readme"

[project.scripts]
pyomo-optimizer = "pyomo_optimizer_user_interface.main:run"

[tool.hatch.build.targets.sdist]
include = [
    "/pyomo_optimizer_user_interface",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["pyomo_optimizer_user_interface"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
